# comparaison_barometre_FUB

./: .gitignore  ALL.py  EPCI.py  LICENSE  README.md  barometre_EPCI.py  barometre_EPCI_2021_big.py  barometre_EPCI_2021_big_percent.py  barometre_EPCI_2025.py  barometre_EPCI_2025_big.py  barometre_EPCI_2025_big_percent.py  barometre_EPCI_2025_logo.py  barometre_dep_2021.py  barometre_dep_2025.py  barometre_npdc_2025.py  pyproject.toml
data/: Carte_participation_data_utf8.csv  barometre2021.json  barometre2025.json
