[project]
name = "comparaison-barometre-fub"
version = "0.1.0"
description = "Comparaison des baromètres FUB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "geopandas>=1.0.1",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
license = "MIT"
authors = [
    { name = "CyclisteBx", email = "sped-seldom-0z@icloud.com" },
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
]
